0.9.0/_sources/gallery/labels-2d.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/labels-2d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_labels-2d.py:


Labels 2D
=========

Display a labels layer above of an image layer using the ``add_labels`` and
``add_image`` APIs

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 10-34



.. image-sg:: /gallery/images/sphx_glr_labels-2d_001.png
   :alt: labels 2d
   :srcset: /gallery/images/sphx_glr_labels-2d_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    The color of label 5 is [0.2784314  0.22745098 0.62352943 1.        ]






|

.. code-block:: Python


    from skimage import data
    from skimage.color import rgb2gray
    from skimage.segmentation import slic

    import napari

    astro = data.astronaut()

    # initialise viewer with astro image
    viewer = napari.Viewer()
    layer = viewer.add_image(rgb2gray(astro), name='astronaut', rgb=False)

    # add the labels
    # we add 1 because SLIC returns labels from 0, which we consider background
    labels = slic(astro, channel_axis=-1, compactness=20) + 1
    label_layer = viewer.add_labels(labels, name='segmentation')

    # Set the labels layer mode to picker with a string
    label_layer.mode = 'PICK'
    print(f'The color of label 5 is {label_layer.get_color(5)}')

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_labels-2d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: labels-2d.ipynb <labels-2d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: labels-2d.py <labels-2d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: labels-2d.zip <labels-2d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
